Typo fixes & added more

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <span class="name-letter">C</span><span class="name-letter">o</span><span class="name-letter">l</span><span class="name-letter">e</span> <span class="name-letter">H</span><span class="name-letter">a</span><span class="name-letter">r</span><span class="name-letter">p</span><span class="name-letter">e</span><span class="name-letter">r</span>
     </div>
     <div class="subtitle">
-       Student&#8226;Explorer&#8226;2023
+       Student &#8226; Aspiring Programmer &#8226; 2023
     </div>
   </div>
 
@@ -24,8 +24,7 @@
     <div class="about-me">
       <p>I'm Cole! </p>
       <p>I am a student at the University of Texas at Austin! I currently do not have a major, but I hope to be transferring into Computer Science very soon! </p>
-			<p>I am extremely interested in communication between software and hardware, especially the kernel.
-      <p>I have experience programming in Java, Javascript, and I'm currently C. My <a href="Resume.pdf">resume</a> is available</p>
+      <p>I have experience programming in Java, Javascript, and I'm currently learning C and React Native. My <a href="Resume.pdf">resume</a> is available</p>
     </div>
   </div>
 
@@ -45,7 +44,7 @@
         True Colors
         </h2>
         <div class="project-description">
-          <p>True Colors is an app designed to scan any barcode, revealing the parent company's Environmental, Social, and Governance ratings. Revealing to consumers if that company is striving for sustainability.</p>
+          <p>True Colors is an app designed to scan any barcode, revealing the parent company's Environmental, Social, and Governance ratings. Informing consumers on how sustainable their favorite brands are.</p>
           <p> The app was desgined entirely using React Native</p>
           <p>True Colors was a collabrative project at HackTX 2019. I contributed to the the backend development with creating a NoSQL database. My team and I placed 2nd in the PIMCO Sponsor Challenge.</p>
           <p>You can check out more by visitng the devpost by selecting the image.</p>
@@ -63,12 +62,53 @@
         Collision Vision
         </h2>
         <div class="project-description">
-          <p>Collision Vision is a website provides drivers with an easy to use, interactive map, depicting all possible roads considered hazardous in given area. Based on previous crash data, our website provides predictions of what percent of the time a certain road will be considered "dangerous". </p>
+          <p>Collision Vision is a website that provides everyone with an easy to use, interactive map, depicting all possible roads considered hazardous in given area. Based on previous crash data, our website provides predictions of what percent of the time a certain road will be considered "dangerous". </p>
           <p>Collision Vision uses Microsoft Cognitive Services to identifty problematic intersections by training the model on satellite images taken of locations of crashes. The model then can recognize if the intersection is potentially dangerous.</p>
+          <p> The project was written in Python, HTML, CSS, and Javascript.</p>
           <p>Collision Vision was a collabrative project at TAMUHack 2020. I contributed by making the webapp and implementing the Google Maps API. My Team won Hacker Favorite. </p>
           <p>You can check out more by visitng the devpost by selecting the image.</p>
         </div>
       </div>
+    </div>
+  </div>
+
+<div class="body-container sage">
+  <h1 class="header-1">
+    Interests
+  </h1>
+  <div class="row">
+    <div class="column">
+      <h2 class="project-title">
+        Computer Science
+        <div class="my-interests">
+          <ul>
+            <li> Systems - Kernel </li>
+            <li> Software Engineering</li>
+          </ul>
+        </div>
+      </div>
+      <div class="column">
+        <h2 class="project-title">
+          Personal
+          <div class="my-interests">
+            <ul>
+              <li> Video Games - particularly strategy games</li>
+              <li> History - US and European </li>
+              <li> D&D - Currently playing a Human Eldrich Knight </li>
+            </ul>
+          </div>
+            </div>
+              </div>
+                </div>
+
+<div class="body-container burnt-sienna">
+  <h1 class="header-1">
+    Current Side Project
+  </h1>
+    <div class="current-projects">
+      <p> My current side project is this website. I am improving my HTML and CSS skills.</p>
+      <p> I will soon begin working on a chrome extenstion/app that will track expenses.</p>
+      <p> You can check out my <a href="https://github.com/HarperCole">Github</a> and follow along with my progress.</p>
     </div>
   </div>
 
@@ -89,7 +129,8 @@
     <div class="link-container">
       <a class="link" href="Resume.pdf">Resume</a>
       <div class="bullet"> &#8226; </div>
-
+      <a class="link" href="https://github.com/HarperCole">Github</a>
+      <div class="bullet"> &#8226; </div>
       <a class="link" href="https://www.linkedin.com/in/harper-cole/">LinkedIn</a>
       <div class="bullet"> &#8226; </div>
       <span id="email-container">
