--- a/index.html
+++ b/index.html
@@ -35,9 +35,7 @@
     </h1>
     <div class="body-item">
       <div class="image-container">
-        <a href="https://devpost.com/software/true-colors">
-        <img height=500 src="https://harpercole.github.io/img/original.png" alt="True Colors logo" />
-      </a>
+        <img height=500 src="img/original.png" alt="True Colors logo" />
       </div>
       <div>
         <h2 class="project-title">
@@ -47,15 +45,13 @@
           <p>True Colors is an app designed to scan any barcode, revealing the parent company's Environmental, Social, and Governance ratings. Informing consumers on how sustainable their favorite brands are.</p>
           <p> The app was desgined entirely using React Native</p>
           <p>True Colors was a collabrative project at HackTX 2019. I contributed to the the backend development with creating a NoSQL database. My team and I placed 2nd in the PIMCO Sponsor Challenge.</p>
-          <p>You can check out more by visitng the devpost by selecting the image.</p>
+          <p>You can check out more by visitng the <a href="https://devpost.com/software/true-colors">devpost</a></p>
         </div>
       </div>
     </div>
     <div class="body-item right-image">
       <div class="image-container transition-from-right">
-        <a href="https://devpost.com/software/collision-vision">
-        <img height=500 src="https://harpercole.github.io/img/gallery.png" alt="Collision Vision Logo" />
-      </a>
+        <img height=500 src="img/gallery.png" alt="Collision Vision Logo" />
       </div>
       <div>
         <h2 class="project-title">
@@ -66,7 +62,7 @@
           <p>Collision Vision uses Microsoft Cognitive Services to identifty problematic intersections by training the model on satellite images taken of locations of crashes. The model then can recognize if the intersection is potentially dangerous.</p>
           <p> The project was written in Python, HTML, CSS, and Javascript.</p>
           <p>Collision Vision was a collabrative project at TAMUHack 2020. I contributed by making the webapp and implementing the Google Maps API. My Team won Hacker Favorite. </p>
-          <p>You can check out more by visitng the devpost by selecting the image.</p>
+          <p>You can check out more by visitng the <a href="https://devpost.com/software/collision-vision"> devpost</a></p>
         </div>
       </div>
     </div>
