--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <title>Cole Harper</title>
   <link href="css/font.css" rel="stylesheet">
   <link href="css/main.css" rel="stylesheet">
+  <link rel="shortcut icon" type="image/png" href="img/icon.png">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script src="js/anime.min.js"></script>
 </head>
@@ -23,7 +24,8 @@
     </h1>
     <div class="about-me">
       <p>I'm Cole! </p>
-      <p>I am a student at the University of Texas at Austin! I currently do not have a major, but I hope to be transferring into Computer Science very soon! </p>
+      <p>I am a student at the University of Texas at Austin! </p>
+      <p>I currently do not have a major, but I hope to be transferring into Computer Science very soon!</p>
       <p>I have experience programming in Java, Javascript, and I'm currently learning C and React Native. My <a href="Resume.pdf">resume</a> is available</p>
     </div>
   </div>
@@ -43,15 +45,15 @@
         </h2>
         <div class="project-description">
           <p>True Colors is an app designed to scan any barcode, revealing the parent company's Environmental, Social, and Governance ratings. Informing consumers on how sustainable their favorite brands are.</p>
-          <p> The app was desgined entirely using React Native</p>
+          <p> The app was desgined entirely using React Native.</p>
           <p>True Colors was a collabrative project at HackTX 2019. I contributed to the the backend development with creating a NoSQL database. My team and I placed 2nd in the PIMCO Sponsor Challenge.</p>
-          <p>You can check out more by visitng the <a href="https://devpost.com/software/true-colors">devpost</a></p>
+          <p>You can check out more by visitng the <a href="https://devpost.com/software/true-colors">devpost</a>.</p>
         </div>
       </div>
     </div>
     <div class="body-item right-image">
       <div class="image-container transition-from-right">
-        <img height=500 src="img/gallery.png" alt="Collision Vision Logo" />
+        <img height=500 src="gallery.png" alt="Collision Vision Logo" />
       </div>
       <div>
         <h2 class="project-title">
@@ -62,7 +64,7 @@
           <p>Collision Vision uses Microsoft Cognitive Services to identifty problematic intersections by training the model on satellite images taken of locations of crashes. The model then can recognize if the intersection is potentially dangerous.</p>
           <p> The project was written in Python, HTML, CSS, and Javascript.</p>
           <p>Collision Vision was a collabrative project at TAMUHack 2020. I contributed by making the webapp and implementing the Google Maps API. My Team won Hacker Favorite. </p>
-          <p>You can check out more by visitng the <a href="https://devpost.com/software/collision-vision"> devpost</a></p>
+          <p>You can check out more by visitng the <a href="https://devpost.com/software/collision-vision"> devpost</a>.</p>
         </div>
       </div>
     </div>
@@ -78,8 +80,8 @@
         Computer Science
         <div class="my-interests">
           <ul>
-            <li> Systems - Kernel </li>
-            <li> Software Engineering</li>
+            <li>Systems - Kernel </li>
+            <li>Software Engineering</li>
           </ul>
         </div>
       </div>
@@ -88,9 +90,9 @@
           Personal
           <div class="my-interests">
             <ul>
-              <li> Video Games - particularly strategy games</li>
+              <li> Video Games - particularly Strategy Games</li>
               <li> History - US and European </li>
-              <li> D&D - Currently playing a Human Eldrich Knight </li>
+              <li> D&D - Currently playing a Human Eldritch Knight </li>
             </ul>
           </div>
             </div>
@@ -103,7 +105,7 @@
   </h1>
     <div class="current-projects">
       <p> My current side project is this website. I am improving my HTML and CSS skills.</p>
-      <p> I will soon begin working on a chrome extenstion/app that will track expenses.</p>
+      <p> I will soon begin working on a Chrome extenstion/app that will track expenses.</p>
       <p> You can check out my <a href="https://github.com/HarperCole">Github</a> and follow along with my progress.</p>
     </div>
   </div>
