typos & project update

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <p>True Colors is an app designed to scan any barcode, revealing the parent company's Environmental, Social, and Governance ratings. Informing consumers on how sustainable their favorite brands are.</p>
           <p> The app was desgined entirely using React Native.</p>
           <p>True Colors was a collabrative project at HackTX 2019. I contributed to the the backend development with creating a NoSQL database. My team and I placed 2nd in the PIMCO Sponsor Challenge.</p>
-          <p>You can check out more by visitng the <a href="https://devpost.com/software/true-colors">devpost</a>.</p>
+          <p>You can check out more by visiting the <a href="https://devpost.com/software/true-colors">devpost</a>.</p>
         </div>
       </div>
     </div>
@@ -64,7 +64,7 @@
           <p>Collision Vision uses Microsoft Cognitive Services to identifty problematic intersections by training the model on satellite images taken of locations of crashes. The model then can recognize if the intersection is potentially dangerous.</p>
           <p> The project was written in Python, HTML, CSS, and Javascript.</p>
           <p>Collision Vision was a collabrative project at TAMUHack 2020. I contributed by making the webapp and implementing the Google Maps API. My Team won Hacker Favorite. </p>
-          <p>You can check out more by visitng the <a href="https://devpost.com/software/collision-vision"> devpost</a>.</p>
+          <p>You can check out more by visiting the <a href="https://devpost.com/software/collision-vision"> devpost</a>.</p>
         </div>
       </div>
     </div>
@@ -105,7 +105,7 @@
   </h1>
     <div class="current-projects">
       <p> My current side project is this website. I am improving my HTML and CSS skills.</p>
-      <p> I will soon begin working on a Chrome extenstion/app that will track expenses.</p>
+      <p> I will soon begin working on a mobile app that will make lunch suggestions based on your location and other related preferences.</p>
       <p> You can check out my <a href="https://github.com/HarperCole">Github</a> and follow along with my progress.</p>
     </div>
   </div>
