--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="about-me">
       <p>I'm Cole! </p>
       <p>I am a student at the University of Texas at Austin! </p>
-      <p>I currently do not have a major, but I hope to be transferring into Computer Science very soon!</p>
+      <p>I am a UT CS major, Class of 2023!</p>
       <p>I have experience programming in Java, Javascript, and I'm currently learning C and React Native. My <a href="Resume.pdf">resume</a> is available</p>
     </div>
   </div>
